feat: ajuste clean code.
feat: ajuste clean code.